修复臻选BUG修改图片

--- a/public/css/web/push_list.css
+++ b/public/css/web/push_list.css
@@ -3,7 +3,7 @@
     width: 1100px!important;
     height: 334px;
     margin: 10px auto;
-    background:url(../../images/web/push_banner.png);
+    background:url(../../images/web/push_banner.jpg);
 }
 /*主体商品遍历部分*/
 .main {
