--- a/public/web/css/business.css
+++ b/public/web/css/business.css
@@ -48,7 +48,7 @@ a,a:hover{
     border: none;
 }
 #pyt_nav{
-    background-image:url("../../images/web/_banner.png");
+    background-image:url("../../images/web/_banner.jpg");
     color: #fff;
     width: 100%;
     height: 600px;
@@ -194,7 +194,7 @@ a,a:hover{
     top: 80px;
     width: 100%;
     height: 790px;
-    background-image: url("../../images/web/qiyeshengtailian.png");
+    background-image: url("../../images/web/qiyeshengtailian.jpg");
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
