--- a/public/web/css/construction.css
+++ b/public/web/css/construction.css
@@ -48,7 +48,7 @@ a,a:hover{
     border: none;
 }
 #pyt_nav{
-    background-image:url("../../images/web/construction.png");
+    background-image:url("../../images/web/construction.jpg");
     color: #fff;
     width: 100%;
     height: 800px;
