--- a/public/web/css/about_us.css
+++ b/public/web/css/about_us.css
@@ -48,7 +48,7 @@ a,a:hover{
     border: none;
 }
 #pyt_nav{
-    background-image:url("../../images/web/about_us.png");
+    background-image:url("../../images/web/about_us.jpg");
     color: #fff;
     width: 100%;
     height: 300px;
@@ -194,7 +194,7 @@ a,a:hover{
 /*关注微信*/
 .follow_wechat {
     height: 552px;
-    background-image:url("../../images/web/about_us_wechat.png");
+    background-image:url("../../images/web/about_us_wechat.jpg");
     display: flex;
     flex-direction: column;
     align-items: center;
