--- a/public/web/css/index11.css
+++ b/public/web/css/index11.css
@@ -18,7 +18,7 @@ body{
 }
 
 .banner_bag{
-    background-image:url("../images/bjt.png");
+    background-image:url("../images/bjt.jpg");
     width: 100%;
     height: 610px;
     background-size: 100% 100%;
@@ -83,7 +83,7 @@ body{
     width: 60%;
     height: 502px;
     margin-left:20%;
-    background-image: url("../images/e7610562388bcb0033357f07544c2c7d8e7e263f86a93-2WQmVt_fw658拷贝2@2x.png");
+    background-image: url("../images/e7610562388bcb0033357f07544c2c7d8e7e263f86a93-2WQmVt_fw658.jpg");
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
@@ -184,7 +184,7 @@ body{
     position: absolute;
     top:482px;
 
-    background-image: url("../images/bejt@2x.png");
+    background-image: url("../images/bejt@2x.jpg");
 
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
@@ -197,7 +197,7 @@ body{
 }
 .coulmn{
     height: 498px;
-    background-image: url("../images/cda2413f3fac9467f15a7923c62344067eec91703609f-PkLM8p_fw658@2x.png");
+    background-image: url("../images/cda2413f3fac9467f15a7923c62344067eec91703609f-PkLM8p_fw658@2x.jpg");
 }
 /*产品矩阵*/
 .cpjz{
@@ -215,7 +215,7 @@ body{
     height: 820px;
     margin-left: 18%;
     margin-top: 20px;
-    background-image: url("../images/cpjx.png");
+    background-image: url("../images/cpjx.jpg");
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
